<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_example" android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" /> -->
    <item android:id="@+id/action_cart"
        android:icon="@drawable/ic_action_cart"
        android:title="@string/action_cart"
        app:showAsAction="always"/>
    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="never"/>
    <item android:id="@+id/account"
        android:title="@string/account"
        app:showAsAction="never"/>
    <item android:id="@+id/signout"
        android:title="@string/signout"
        app:showAsAction="never"/>

</menu>
