<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kiwiteam.nomiddleman.ChangePasswordActivity">
    <!-- As the main content view, the view below consumes the entire
             space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/old_password"
                android:id="@+id/textView44" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/oldPass"
                android:maxLength="16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/new_password"
                android:id="@+id/textView7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/newPass"
                android:maxLength="16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/confirm_password"
                android:id="@+id/textView25" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/cNewPass"
                android:maxLength="16" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:id="@+id/confirm"
                    android:layout_gravity="center_horizontal"
                    android:onClick="confirm"
                    android:background="#8cc538"
                    android:textColor="#fff"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:layout_gravity="center_horizontal"
                    android:onClick="cancel"
                    android:background="#8cc538"
                    android:textColor="#fff"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />
            </TableRow>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
