<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity" >

    <FrameLayout android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/review"
                android:clickable="true"
                android:text="@string/order_review"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <ListView
                    android:id="@+id/listView"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="10">
                </ListView>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="right"
                    android:gravity="end"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/total_price"
                        android:id="@+id/textView22"
                        android:textSize="16sp"
                        android:layout_margin="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/price"
                        android:textSize="16sp"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:layout_margin="5dp" />
                </TableRow>

            </TableLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:id="@+id/payment"
                    android:layout_margin="5dp"
                    android:background="#8cc538"
                    android:textColor="#fff"
                    android:onClick="PayPalButtonClick"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:layout_margin="5dp"
                    android:background="#8cc538"
                    android:textColor="#fff"
                    android:onClick="cancel"
                    android:layout_weight="1" />
            </TableRow>


        </LinearLayout>

    </FrameLayout>


</RelativeLayout>
